# src/routes/admin/auth/login.route.js
@@ -4,7 +4,7 @@ import { login, verifyLogin, logout } from "../../../controllers/admin/auth/logi
 
 const router = express.Router();
 
-router.post("/", wrapAsync(login));
+router.post("/login", wrapAsync(login));
 router.post("/verify", wrapAsync(verifyLogin));
 router.post("/logout", wrapAsync(logout));
 
